force-app/main/default/objects/Store_Supply_Order__c/Store_Supply_Order__c.object-meta.xml
<CustomObject>
    <label>Store Supply Order</label>
    <nameField>
        <label>Store Supply Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Store Supply Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>