force-app/main/default/objects/Store_Supply_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Supplier that this order will be from</description>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account must be a Supplier</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Store Supply Orders</relationshipLabel>
    <relationshipName>Store_Supply_Orders</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>