force-app/main/default/objects/Store_Supply_Order__c/fields/Date_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Delivery__c</fullName>
    <description>Expected delivery date of the order</description>
    <label>Date of Delivery</label>
    <type>Date</type>
</CustomField>