force-app/main/default/objects/Store_Supply_Order__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>Expected delivery date of the order</description>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>