force-app/main/default/objects/Store_Supply_Order__c/fields/Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Order_Amount__c</fullName>
    <description>Total cost of the order</description>
    <label>Order Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>