force-app/main/default/objects/Store_Supply_Order__c/fields/Product_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Product_Ordered__c</fullName>
    <description>Specifies what the order is for</description>
    <label>Product Ordered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Flavoring</fullName>
            </value>
            <value>
                <fullName>Pastries</fullName>
            </value>
            <value>
                <fullName>Cups</fullName>
            </value>
            <value>
                <fullName>Utensils</fullName>
            </value>
            <value>
                <fullName>Napkins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>