force-app/main/default/objects/Store_Supply_Order__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <description>The store that is placing the order</description>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Store Supply Orders</relationshipLabel>
    <relationshipName>Store_Supply_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>